# mfc

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  CNAME  Makefile  PLAN.md  README.md  USER-TODO.md  admin-ingredient-app.jsx  admin-ingredient.html  admin-ingredients-app.jsx  admin-ingredients.html  admin-recipe-app.jsx  admin-recipe.html  admin-recipes-app.jsx  admin-recipes.html  admin-shared.jsx  admin-styles.css  admin-utensil-app.jsx  admin-utensil.html  admin-utensils-app.jsx  admin-utensils.html  dashboard-app.jsx  dashboard.html  hero-image-generator.md  image-generator.md  index.html  markers-app.jsx  markers.html  package-lock.json  recipe-app.jsx  recipe-base.css  recipe-components.jsx  recipe-search.html  recipe-styles.css  recipe.html  recipe.jsx  requirements.txt  script.js  (+3 more)
automation/: .env.sample  README.md  db.sqlite  pyproject.toml
automation/db/: migration-2026-05-05-roles-foundation.sql  migration-2026-05-06-images-storage.sql  migration-2026-05-07-recipe-ownership.sql  schema.sql  sqlite_schema.sql
automation/mfc/: __init__.py  __main__.py  cli.py
automation/tests/: conftest.py  test_aifill.py  test_amazon_asin.py  test_amazon_fetch.py  test_bundle_decompose.py  test_bundle_decompose_recipe.py  test_bundle_decompose_utensil.py  test_catalog.py  test_create_utensil_compose.py  test_create_utensil_helpers.py  test_create_utensil_images.py  test_fdc.py  test_image_processing.py  test_nutrition_migration.py  test_sqlite_schema.py  test_thiings.py  test_update_utensil_compose.py  test_update_utensil_helpers.py  test_update_utensil_images.py  test_usda_extract.py  test_utensil_files.py  test_utensil_images.py  test_utensils_transforms.py
routine/: README.md  pyproject.toml  workspace.yaml
routine/routine/: definitions.py
routine/tests/: test_definitions.py  test_ocr_image.py  test_paths.py  (+4 more)
(+1336 files in other folders)
