[project]
name = "mfc"
version = "0.1.0"
description = "MyFoodCraving Supabase management CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.1",
  "supabase>=2.0",
  "python-dotenv>=1.0",
]

[project.scripts]
mfc = "mfc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mfc"]
