[project]
name = "mfc"
version = "0.1.0"
description = "MyFoodCraving Supabase management CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.1",
  "supabase>=2.0",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "Pillow>=10.0",
  "anthropic>=0.40",
]

[project.scripts]
mfc = "mfc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["mfc"]
