[project]
name = "routine"
version = "0.1.0"
description = "Local Dagster pipelines for MyFoodCraving"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dagster>=1.8",
  "dagster-webserver>=1.8",
  "supabase>=2.0",
  "psycopg[binary]>=3.1",
  "python-dotenv>=1.0",
  "pydantic>=2.0",
  "jinja2>=3.1",
  "pdfplumber>=0.11",
  "pdf2image>=1.17",
  "pytesseract>=0.3",
  "Pillow>=10",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["routine"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.dagster]
module_name = "routine.definitions"
code_location_name = "routine"
